force-app/main/default/objects/APIConstant__mdt/APIConstant__mdt.object-meta.xml
<CustomObject>
    <description
  >Constants for API Settings to be used for API calls</description>
    <label>APIConstant</label>
    <pluralLabel>APIConstants</pluralLabel>
</CustomObject>