force-app/main/default/objects/APIConstant__mdt/fields/APISetting__c.field-meta.xml
<CustomField>
    <fullName>APISetting__c</fullName>
    <description
  >API Setting name for which constant needs to be created</description>
    <label>APISetting</label>
    <referenceTo>APISetting__mdt</referenceTo>
    <relationshipLabel>APIConstants</relationshipLabel>
    <relationshipName>APIConstants</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>