force-app/main/default/objects/APIConstant__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value of the constant</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>